mpegaudio_parser: reset state to prevent it to be random

Fixes Ticket1718

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit 93b240f4a59348c07d3d7e4862227f6949c51e14)

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit 3581ab6ce0754544b06f34f7875b731a5ca2e061)

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>